# orilib

./: .gitignore  IO_MemWriter_Init_i.c  IO_MemWriter_Init_i.h  IO_MemWriter_Init_t.h  IO_MemWriter_i.c  IO_MemWriter_i.h  IO_MemWriter_t.h  Makefile.am  Makefile.am.common  ORILIB_AckPacker_i.c  ORILIB_AckPacker_i.h  ORILIB_AckPacker_t.h  ORILIB_AutoGainController_Init_i.c  ORILIB_AutoGainController_Init_i.h  ORILIB_AutoGainController_Init_t.h  ORILIB_AutoGainController_i.c  ORILIB_AutoGainController_i.h  ORILIB_AutoGainController_t.h  ORILIB_BPSKEVMEstimator_i.c  ORILIB_BPSKEVMEstimator_i.h  ORILIB_BPSKEVMEstimator_t.h  ORILIB_BitCacheGet_a8_C1024_i.c  ORILIB_BitCacheGet_a8_C1024_i.h  ORILIB_BitCacheGet_a8_C1024_t.h  ORILIB_BitCacheGet_circular_a8_C1024_i.c  ORILIB_BitCacheGet_circular_a8_C1024_i.h  ORILIB_BitCacheGet_circular_a8_C1024_t.h  ORILIB_BitCacheInit_C1024_i.c  ORILIB_BitCacheInit_C1024_i.h  ORILIB_BitCacheInit_C1024_t.h  ORILIB_BitCacheInit_circular_C1024_i.c  ORILIB_BitCacheInit_circular_C1024_i.h  ORILIB_BitCacheInit_circular_C1024_t.h  ORILIB_BitCacheSkipPut_a8_C1024b_i.c  ORILIB_BitCacheSkipPut_a8_C1024b_i.h  ORILIB_BitCacheSkipPut_a8_C1024b_t.h  ORILIB_BitCacheSkipPut_circular_a8_C1024b_i.c  ORILIB_BitCacheSkipPut_circular_a8_C1024b_i.h  ORILIB_BitCacheSkipPut_circular_a8_C1024b_t.h  ORILIB_BitCache_a8_algos.h  (+405 more)
from_tiextlibs/: README
